--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@ a:focus > .sf-sub-indicator,a:hover > .sf-sub-indicator,a:active > .sf-sub-indic
 #header-inner {}
 #header,#header a { color: #d6501e }
 #header a:hover {}
-#header h1 { padding-top:4px;font-size: 34px; line-height: 50px; text-transform: uppercase}
+#header h1 { padding-top:4px;font-size: 50px; line-height: 50px; text-transform: uppercase;
+      box-shadow:#101010 6px,10px,6px;
+
+}
 #header img {padding-top: 13px;max-height:50px}
 #slider-wrapper{height:447px;overflow:hidden;position:relative;background-color:#000}
 #slider{position:relative;width:980px;height:447px;background:url(https://lh5.googleusercontent.com/-XLzOtCdhXgo/UO1xwippwxI/AAAAAAAAE78/AL9zDMa0v_E/s128/loading.gif) no-repeat 50% 50%}
@@ -175,7 +178,7 @@ text-transform: uppercase;
 }
 .post h1 {
 color: #CB4E1F;
-font-size: 12px;
+font-size: 60px;
 line-height: 1.2em;
 margin: 10px 0 20px;
 text-transform: uppercase
@@ -209,7 +212,7 @@ width: 4px;
 .sidebar .widget {margin-bottom:33px}
 .sidebar h2 {
 color: #CB4E1F;
-font-size: 12px;
+font-size: 15px;
 line-height: 1em;
 margin-bottom: 19px;
 text-transform: uppercase
@@ -448,16 +451,16 @@ XD Games
 <a href='#'><img src='https://lh3.googleusercontent.com/-Dxq1oGBw1XE/UO1xyF5ZpAI/AAAAAAAAE8k/_WpaeZ-piTw/s980/slide-01.jpg' title='#sliderCaption6'/></a>
 </div>
 <div class='nivo-html-caption' id='sliderCaption1'>
-<h2>O melhor Blog de Games da Internet</h2>
+<h2> </h2>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed leo at quam suscipit pretium ac eget dolor. Duis lacus erat, iaculis sodales dignissim quis, interdum a dolor. Suspendisse eget porta orci, eget tempus nisl.<a class='arrow' href='#'></a></div>
 <div class='nivo-html-caption' id='sliderCaption2'>
-<h2>TUTORIAIS DE JOGOS TODOS OS DIAS </h2>
-ESTAREI POSTANDO PARA VOCÊS AS MELHORES DICAS DO MUNDO DOS GAMES <a class='arrow' href='#'></a></div>
+<h2>it to make type specimen book. It has survived not only five centuries </h2>
+but also the leap into electronic typesetting, <a class='arrow' href='#'></a></div>
 <div class='nivo-html-caption' id='sliderCaption3'>
-<h2>OS MELHORES GAMES VOCÊ VAI BAIXAR AQUI!</h2>
-GAMES MAIS BAIXADOS , TUTORIAIS , E MUITO MAIS ... <a class='arrow' href='#'></a></div>
+<h2>Letraset sheets containing Lorem Ipsum passages, and more recently</h2>
+Lorem Ipsum is simply dummy text of the printing and typesetting industry. <a class='arrow' href='#'></a></div>
 <div class='nivo-html-caption' id='sliderCaption4'>
-<h2>VISITE NOSSA PÁGINA NO FACEBOOK</h2>
+<h2>release of Letraset sheets containing Lorem Ipsum passages, and more recently</h2>
 Excepteur sint occaecat cupid- atat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <a class='arrow' href='#'></a></div>
 <div class='nivo-html-caption' id='sliderCaption5'>
 <h2></h2>
